--- a/timeline/templates/base.html
+++ b/timeline/templates/base.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="left">
 			<ul class="list">
-				<li><a href="/" title="Home">Timeline</a></li>
+				<li><a href="/" title="Home">timeline</a></li>
 				{% for s in source %}
 				<li><a href="/{{ s }}" title="{{ s }}">{{ s }}</a></li>
 				{% endfor %}
