--- a/timeline/templates/login.html
+++ b/timeline/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ "Login" }}{% endblock %}
+{% block title %}{{ "Login" }} - {{ site["title"] }}{% endblock %}
 
 {% block content %}
 	<p class="info"><a href="/weibo/signin">Weibo Sign In</a></p>
