add : past timeline
- today in history
- sync all weibo of user
- sync all tweets of user

--- a/timeline/templates/base.html
+++ b/timeline/templates/base.html
@@ -43,6 +43,7 @@
 				{% for s in source %}
 				<li><a href="/{{ s }}" title="{{ s }}">{{ s }}</a></li>
 				{% endfor %}
+				<li><a href="/past" title="past">past</a></li>
 				{% for l in links %}
 				<li><a href="{{ l['link'] }}" title="{{ l['title'] }}" target="_blank">{{ l['name'] }}</a></li>
 				{% endfor %}
