--- a/timeline/static/css/style.css
+++ b/timeline/static/css/style.css
@@ -189,6 +189,19 @@ textarea:focus{
     background-color:rgba(20, 145, 152, 0.4);
 }
 
+/* for past page */
+.past_title{
+    font-size: 24px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+}
+
+.past_count{
+    font-size: 16px;
+    color: rgba(0,0,0,.3);
+    padding-left: 15px;
+}
+
 /* for github rss*/
 .gtihub .gravatar{
     display:none;
