New : statistic graph
- hourly counts
- monthly counts
- source counts

--- a/timeline/templates/base.html
+++ b/timeline/templates/base.html
@@ -44,6 +44,7 @@
 				<li><a href="/{{ s }}" title="{{ s }}">{{ s }}</a></li>
 				{% endfor %}
 				<li><a href="/past" title="past">past</a></li>
+				<li><a href="/statistic" title="graphic statistic">graph</a></li>
 				{% for l in links %}
 				<li><a href="{{ l['link'] }}" title="{{ l['title'] }}" target="_blank">{{ l['name'] }}</a></li>
 				{% endfor %}
