--- a/timeline/static/css/style.css
+++ b/timeline/static/css/style.css
@@ -5,7 +5,7 @@ body{
     font-family:'Segoe UI',Verdana,Arial,'Hiragino Sans GB','Microsoft YaHei';
 }
 
-.content > code,.content > pre,.content > blockquote{
+code, pre, blockquote{
     font-family: "Deja Vu Sans Mono",Consolas,Monaco,"Courier New",Courier,monospace;
     padding:1px 10px;
     line-height:1.8;
