--- a/timeline/templates/past.html
+++ b/timeline/templates/past.html
@@ -4,7 +4,8 @@
 {% block content %}
     {% if posts_dict %}
         {% for k,v in posts_dict.items() %}
-            <div class="past_title">{{ k }}<span class="past_count">{{ v | length }}</span></div>
+            <div class="past_title">{{ k }}<span class="past_count">{{ v | length }}</span>
+            </div>
             {% for post in v %}
             <div class="entry">
                 <div class='title'>
@@ -25,5 +26,12 @@
     {% else %}
         <div class="past_title">No past post here.</div>
     {% endif %}
-</div>
+
+    <div class="pager">
+        <a class="pre" href="/past/{{ yesterday }}">Yesterday</a>
+        &nbsp;&nbsp;&nbsp;
+        <a class="next" href="/past/{{ tomorrow }}">Tomorrow</a>
+    </div>
 {% endblock %}
+
+
