--- a/timeline/templates/base.html
+++ b/timeline/templates/base.html
@@ -6,30 +6,8 @@
 	<link rel='alternate' type='application/rss+xml' title='atom 1.0' href='/feed' />
 	<link rel="icon" type="image/png" href="/static/img/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
-	<script type="text/javascript">
-		function ChangeStyle(){
-		    var doc=document;
-		    var style=doc.createElement("style");
-		    style.setAttribute("type", "text/css");
-		    cssString = ".wrap{width:100% !important;margin:0 !important;}" +
-						".left{width:13% !important;}"+
-						".left, .header{margin-left: 0;}" +
-						".right{width:87% ;}.right .entry{margin: 0 5% 50px 0;}";
-
-		    if(style.styleSheet){ // IE
-		        style.styleSheet.cssText = cssString;
-		    } else {
-		        var cssText = doc.createTextNode(cssString);
-		        style.appendChild(cssText);
-		    }
-
-		    var heads = doc.getElementsByTagName("head");
-		    if(heads.length)
-		        heads[0].appendChild(style);
-		    else
-		        doc.documentElement.appendChild(style);
-		}
-	</script>
+  	<script type="text/javascript" src="/static/js/main.js"></script>
+  	{% block script %} {% endblock %}
 </head>
 <body>
 	<div class="wrap">
@@ -45,6 +23,9 @@
 				{% endfor %}
 				<li><a href="/past" title="past">past</a></li>
 				<li><a href="/statistic" title="graphic statistic">graph</a></li>
+				{% if index %}
+				<li><a href="javascript:void(0)" title="search" onclick="Search()">search</a></li>
+				{% endif %}
 				{% for l in links %}
 				<li><a href="{{ l['link'] }}" title="{{ l['title'] }}" target="_blank">{{ l['name'] }}</a></li>
 				{% endfor %}
