--- a/timeline/templates/include/posts_list.html
+++ b/timeline/templates/include/posts_list.html
@@ -1,3 +1,21 @@
+
+<div id="search" class="entry" {{ "" if search else "style=\"display:none\"" }} >
+	<div class='title'>
+		{% if search %}
+		<div class="tips">
+			Search：{{ search }}
+		</div>
+		{% else %}
+		<div class="tips">
+			<form action="/search" method="post">
+				Search：
+				<input type="text" value="" placeholder="search here" name="keyword" />
+			</form>
+		</div>
+		{% endif %}
+	</div>
+</div>
+
 {% for post in posts %}
 	{% if not post.duplicate %}
 	<div class="entry">
@@ -17,7 +35,7 @@
 	{% endif %}
 {% endfor %}
 <div class="pager">
-	{% if pager.previous_page %}
+	{% if pager and pager.previous_page %}
 	<a class="pre" href="{{ pager.previous_page_url }}">Previous</a>
 	{% endif %}
 	&nbsp;&nbsp;&nbsp;
