--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
-{% block title %}{{ site["title"] }} / Sign in{% endblock %}
+{% block title %}{{ site["title"] }} / sign in{% endblock %}
 
 {% block content %}
-	<p class="info"><a href="/weibo/signin">Weibo Sign In</a></p>
-	<p class="info"><a href="/twitter/signin">Twitter Sign In</a></p>
+    <ul class="listing list">
+        <li class="listing-item">
+            <a href="/twitter/signin">sign in with twitter</a>
+        </li>
+        <li class="listing-item">
+            <a href="/weibo/signin">sign in with weibo</a>
+        </li>
+    </ul>
 {% endblock %}
