--- a/templates/past.html
+++ b/templates/past.html
@@ -24,7 +24,7 @@
             {% endfor %}
         {% endfor %}
     {% else %}
-        <div class="past_title">No past post here.</div>
+        <div class="past_title">Nothing here.</div>
     {% endif %}
 
     <div class="pager">
