--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ site["title"] }} / sign in{% endblock %}
+{% block title %}{{ site["title"] }} / {{ title }}{% endblock %}
 
 {% block content %}
     <ul class="listing list">
