fix twitter update status error

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -139,7 +139,7 @@
         });
     </script>
     <div id="chart_hour" class="chart" style="min-width:700px;height:400px;"></div>
-    <div id="chart_month" class="chart" style="width:900px;height:400px;"></div>
-    <div id="chart_source" class="chart" style="width:900px;height:400px;"></div>
+    <div id="chart_month" class="chart" style="min-width:700px;height:400px;"></div>
+    <div id="chart_source" class="chart" style="min-width:700px;height:400px;"></div>
 
 {% endblock %}
