--- a/templates/compose.html
+++ b/templates/compose.html
@@ -19,7 +19,7 @@
             <label for="weibo">weibo</label>&nbsp;&nbsp;&nbsp;
             <input type="checkbox" name="moments" id="moments"
             {{ "checked='checked'" if checked and checked["moments"] else "" }} />
-            <label for="timeline.me">timeline.me</label>
+            <label for="moments">timeline.me</label>
         </p>
         {{ xsrf_form_html() }}
         <p>
