--- a/templates/include/posts_list.html
+++ b/templates/include/posts_list.html
@@ -18,7 +18,7 @@
 <div class="entry">
 	<div class='title'>
 		{% for source in post.source.strip("|").split("|") %}
-		<span class="info"><a href="/s/{{ source }}">{{ source }}</a></span>
+		<span class="info"><a href="/{{ source }}">{{ source }}</a></span>
 		{% endfor %}
 		<a href="{{ post.url }}">{{ post.title }}</a>
 	</div>
