--- a/templates/chart.html
+++ b/templates/chart.html
@@ -138,8 +138,8 @@
             });
         });
     </script>
-    <div id="chart_hour" class="chart" style="min-width:700px;height:400px;"></div>
-    <div id="chart_month" class="chart" style="min-width:700px;height:400px;"></div>
-    <div id="chart_source" class="chart" style="min-width:700px;height:400px;"></div>
+    <div id="chart_hour" class="chart"></div>
+    <div id="chart_month" class="chart"></div>
+    <div id="chart_source" class="chart"></div>
 
 {% endblock %}
