--- a/templates/include/posts_list.html
+++ b/templates/include/posts_list.html
@@ -18,14 +18,14 @@
 <div class="entry">
 	<div class='title'>
 		{% for source in post.source.strip("|").split("|") %}
-		<span class="info"><a href="/{{ source }}">{{ source }}</a></span>
+		<span class="tag"><a href="/{{ source }}">{{ source }}</a></span>
 		{% endfor %}
 		<a href="{{ post.url }}">{{ post.title }}</a>
 	</div>
 	<div class="content {{ " ".join(post.source.strip("|").split("|")) }}">
 		{{  post.content }}
 	</div>
-	<div class="info">
+	<div class="tag">
 		<span>posted on {{ post.create_time }}</span>
 	</div>
 </div>
