--- a/templates/chart.html
+++ b/templates/chart.html
@@ -3,9 +3,9 @@
 
 {% block content %}
     <div class="entry">
-        <span class="info"><a href="/chart">All</a></span>
+        <span class="tag"><a href="/chart">All</a></span>
         {% for y in year_list %}
-        <span class="info"><a href="/chart/{{ y }}">{{ y }}</a></span>
+        <span class="tag"><a href="/chart/{{ y }}">{{ y }}</a></span>
         {% endfor %}
     </div>
     <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
