--- a/templates/past.html
+++ b/templates/past.html
@@ -17,7 +17,7 @@
                 <div class="content {{ " ".join(post.source.strip("|").split("|")) }}">
                     {{  post.content }}
                 </div>
-                <div class="info">
+                <div class="tag">
                     <span>Posted on {{ post.create_time }}</span>
                 </div>
             </div>
