--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,10 +4,10 @@
 {% block content %}
     <ul class="listing list">
         <li class="listing-item">
-            <a href="/twitter/signin">sign in with twitter</a>
+            <h4><a href="/twitter/signin">sign in with twitter</a></h4>
         </li>
         <li class="listing-item">
-            <a href="/weibo/signin">sign in with weibo</a>
+            <h4><a href="/weibo/signin">sign in with weibo</a></h4>
         </li>
     </ul>
 {% endblock %}
